Fixed spacings for desktop design.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,7 +15,7 @@ section {
 }
 
 .form-container {
-    padding: 40px;
+    padding: 65px 40px 40px 40px;
 }
 
 .illustration-sign-up-desktop {
@@ -36,7 +36,7 @@ form {
 }
 
 ul {
-    padding: 20px 0;
+    padding: 20px 0 30px;
     list-style-image: url('../assets/images/icon-list.svg');
     list-style-position: inside;
 }
